set memory and isolated cores dynamically in start scripts